--- a/2/Games/pom.xml
+++ b/2/Games/pom.xml
@@ -65,13 +65,12 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- New Features-->
-
+		<!-- News -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>3.3.1</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
